--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   provider: ^6.1.2
   flutter_inappwebview: ^6.0.0
   connectivity_plus: ^6.0.3
+  shared_preferences: ^2.2.3
 
 
 dev_dependencies:
